--- a/icmsg/CMakeLists.txt
+++ b/icmsg/CMakeLists.txt
@@ -16,6 +16,6 @@ project(ipc_service_host)
 
 target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/common)
 
-target_sources(app PRIVATE src/main.c)
+target_sources(app PRIVATE src/main.c common/common.c)
 
 include(ExternalProject)
