--- a/icmsg/remote/CMakeLists.txt
+++ b/icmsg/remote/CMakeLists.txt
@@ -11,4 +11,4 @@ project(ipc_service_remote)
 
 target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../common)
 
-target_sources(app PRIVATE src/main.c)
+target_sources(app PRIVATE src/main.c ../common/common.c)
