--- a/icmsg/prj.conf
+++ b/icmsg/prj.conf
@@ -4,5 +4,10 @@ CONFIG_IPC_SERVICE=y
 CONFIG_IPC_SERVICE_BACKEND_ICMSG=y
 CONFIG_MBOX=y
 
+CONFIG_ZBUS=y
+CONFIG_ZBUS_LOG_LEVEL_INF=y
+CONFIG_ZBUS_CHANNEL_NAME=y
+CONFIG_ZBUS_OBSERVER_NAME=y
+
 CONFIG_LOG=y
 CONFIG_ASSERT=y
