--- a/icmsg/CMakeLists.txt
+++ b/icmsg/CMakeLists.txt
@@ -14,8 +14,7 @@ endif()
 
 project(ipc_service_host)
 
-target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/common)
-
-target_sources(app PRIVATE src/main.c common/common.c)
+target_sources(app PRIVATE src/main.c)
+add_subdirectory(common)
 
 include(ExternalProject)
