--- a/icmsg/remote/CMakeLists.txt
+++ b/icmsg/remote/CMakeLists.txt
@@ -11,6 +11,6 @@ project(ipc_service_remote)
 
 target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../common)
 
-target_sources(app PRIVATE src/main.c ../common/common.c)
+target_sources(app PRIVATE src/main.c ../common/common.c ../common/zbus_multicore.c)
 
-zephyr_linker_sources(SECTIONS ../common/iterables.ld)
+zephyr_linker_sources(DATA_SECTIONS ../common/iterables.ld)
